--- a/PerfectBrowser/GoogleService-Info.plist
+++ b/PerfectBrowser/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.perfectt.bbrowsers.test</string>
+	<string>com.perfectt.bbrowsers</string>
 	<key>PROJECT_ID</key>
 	<string>perfect-browser-df85b</string>
 	<key>STORAGE_BUCKET</key>
 	<string>perfect-browser-df85b.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:315486457248:ios:a7531b7082e2ec3625e8c5</string>
 </dict>
